added photos for cards

--- a/public/index.html
+++ b/public/index.html
@@ -39,21 +39,21 @@
 
 <div class="card-group col-8 mx-auto">
     <div class="card">
-      <img src="" class="card-img-top" alt="Coming Soon!">
+      <img src="https://raw.githubusercontent.com/Hifumi-Sec/rockbell/main/assets/feature_1.jpeg" class="card-img-top" alt="Coming Soon!">
       <div class="card-body">
         <h5 class="card-title">Rendering</h5>
         <p class="card-text">Rockbell can render HTML, CSS, and JS files with ease.</p>
       </div>
     </div>
     <div class="card">
-      <img src="" class="card-img-top" alt="Coming Soon!">
+      <img src="https://raw.githubusercontent.com/Hifumi-Sec/rockbell/main/assets/feature_1.jpeg" class="card-img-top" alt="Coming Soon!">
       <div class="card-body">
         <h5 class="card-title">Rust</h5>
         <p class="card-text">Built in Rust. That's all.</p>
       </div>
     </div>
     <div class="card">
-      <img src="" class="card-img-top" alt="Coming Soon!">
+      <img src="https://raw.githubusercontent.com/Hifumi-Sec/rockbell/main/assets/feature_1.jpeg" class="card-img-top" alt="Coming Soon!">
       <div class="card-body">
         <h5 class="card-title">Local</h5>
         <p class="card-text">Simple local web server for ease of use.</p>
