--- a/public/index.html
+++ b/public/index.html
@@ -1,73 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | Rockbell</title>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
-
-    <link rel="stylesheet" href="css/style.css">
-
-</head>
-<body>
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/">Rockbell</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/about">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/support">Support the dev</a>
-              </li>
-            </ul>
-          </div>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="Rust, Rust Server, Rockbell" />
+        <meta name="author" content="Hifumi-Sec" />
+        <title>Rockbell</title>
+        <!-- Favicon-->
+        <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Hifumi-Sec/rockbell/main/public/assets/favicon.ico" />
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="css/style.css" rel="stylesheet" />
+    </head>
+    <body id="page-top">
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+            <div class="container">
+                <a class="navbar-brand" href="#page-top">Rockbell</a>
+                <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                    Menu
+                    <i class="fas fa-bars"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">About</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#documentation">Docs</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- Masthead-->
+        <header class="masthead bg-primary text-white text-center">
+            <div class="container d-flex align-items-center flex-column">
+                <!-- Masthead Avatar Image-->
+                <img class="masthead-avatar mb-5" src="https://raw.githubusercontent.com/Hifumi-Sec/rockbell/main/public/assets/favicon.ico" alt="Rust mascot" />
+                <!-- Masthead Heading-->
+                <h1 class="masthead-heading text-uppercase mb-0">Rockbell</h1>
+                <!-- Icon Divider-->
+                <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <!-- Masthead Subheading-->
+                <p class="masthead-subheading font-weight-light mb-0">Built in Rust!</p>
+            </div>
+            <br />
+            <iframe src="https://github.com/sponsors/Hifumi-Sec/card" title="Sponsor Hifumi-Sec" height="100px" width="600" style="background-color: #fff;border-radius: 10px;box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;"></iframe>
+        </header>
+        <!-- About Section-->
+        <section class="page-section portfolio" id="about">
+            <div class="container">
+                <!-- About Section Heading-->
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">About</h2>
+                <!-- Icon Divider-->
+                <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <!-- About Section Content-->
+                <div class="row">
+                    <div class="col-lg-12 ms-auto text-center"><p class="lead">Rockbell is an open-source web server built in Rust for local development. Created by <a href="https://github.com/Hifumi-Sec?tab=repositories">Hifumi-Sec</a>!</p></div>
+                </div>
+            </div>
+                <div class="container">
+                    <!-- Portfolio Grid Items-->
+                    <div class="row justify-content-center text-center">
+                        <!-- Portfolio Item 1-->
+                        <div class="col-md-4 col-lg-3 mb-5 shadow portfolio-container" style="margin-left: 5px; margin-right: 5px;">
+                            <div class="portfolio-item mx-auto">
+                                <img class="img-fluid" src="https://raw.githubusercontent.com/Hifumi-Sec/rockbell/main/public/assets/featured.jpeg" alt="Rust mascot" />
+                            </div>
+                            <p>Rockbell can render HTML, CSS, and JS files with ease.</p>
+                        </div>
+                        <!-- Portfolio Item 2-->
+                        <div class="col-md-4 col-lg-3 mb-5 shadow portfolio-container" style="margin-left: 5px; margin-right: 5px;">
+                          <div class="portfolio-item mx-auto">
+                              <img class="img-fluid" src="https://raw.githubusercontent.com/Hifumi-Sec/rockbell/main/public/assets/featured.jpeg" alt="Rust mascot" />
+                          </div>
+                          <p>Simple local web server for ease of use.</p>
+                      </div>
+                      <!-- Portfolio Item 3-->
+                      <div class="col-md-4 col-lg-3 mb-5 shadow portfolio-container" style="margin-left: 5px; margin-right: 5px;">
+                        <div class="portfolio-item mx-auto">
+                            <img class="img-fluid" src="https://raw.githubusercontent.com/Hifumi-Sec/rockbell/main/public/assets/featured.jpeg" alt="Rust mascot" />
+                        </div>
+                        <p>Built in Rust. That's all.</p>
+                    </div>
+                    </div>
+                </div>
+            </section>
+            <section class="page-section portfolio bg-primary text-white" id="documentation">
+              <div class="container">
+                  <!-- About Section Heading-->
+                  <h2 class="page-section-heading text-center text-uppercase text-white mb-0">How to use</h2>
+                  <!-- Icon Divider-->
+                  <div class="divider-custom">
+                      <div class="divider-custom-line"></div>
+                      <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                      <div class="divider-custom-line"></div>
+                  </div>
+                  <!-- About Section Content-->
+                  <div class="row">
+                      <div class="col-lg-12 ms-auto"><p class="lead">Rockbell is pretty easy to implement! All you'll need is to make sure you have cargo installed, and you're good to go.</p></div>
+                      <div class="col-lg-12 ms-auto"><p class="lead">Just make sure you are in the correct directory. As long as the cargo.toml file is present, you shouldn't have any issues running the server. Once the server is up, go to http://localhost:3005, and you can view this exact website!</p></div>
+                  </div>
+                   <p class="lead shadow" style="padding: 10px;background-color: #0C242B;border-radius: 10px;">~$ cargo run</p>
+                   <p class="lead">You should see the following confirmation:</p>
+                   <p class="lead shadow" style="padding: 10px;background-color: #0C242B;border-radius: 10px;">Finished dev [unoptimized + debuginfo] target(s) in 0.00s
+                  <br />Running `target/debug/main`</p>
+              </div>
+            </section>
+        <!-- Footer-->
+        <footer class="footer text-center">
+            <div class="container">
+                <div class="row">
+                  <!-- Footer About Text-->
+                  <div class="col-lg-4">
+                    <h4 class="text-uppercase mb-4">About Rockbell</h4>
+                    <p class="lead mb-0">
+                      Rockbell is an open-source web server built in Rust for local development. Created by <a href="https://github.com/Hifumi-Sec">Hifumi-Sec</a>!
+                    </p>
+                      </div>
+                    <!-- Footer Location-->
+                    <div class="col-lg-4 mb-5 mb-lg-0">
+                        <h4 class="text-uppercase mb-4">Built on</h4>
+                        <p class="lead mb-0">
+                            Multithreaded server using Rust
+                            <br />
+                            HTML, CSS, JavaScript, Bootstrap
+                        </p>
+                    </div>
+                    <!-- Footer Social Icons-->
+                    <div class="col-lg-4 mb-5 mb-lg-0">
+                        <h4 class="text-uppercase mb-4">Follow the creator</h4>
+                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/Hifumi-Sec"><i class="fab fa-fw fa-github"></i></a>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <!-- Copyright Section-->
+        <div class="copyright py-4 text-center text-white">
+            <div class="container"><small>Copyright &copy; Hifumi-Sec 2021</small></div>
         </div>
-      </nav>
-
-    <h1 class="header-text">Rockbell</h1>
-
-<div class="card-group col-8 mx-auto">
-    <div class="card">
-      <img src="https://raw.githubusercontent.com/Hifumi-Sec/rockbell/main/assets/feature_1.jpeg" class="card-img-top" alt="Coming Soon!">
-      <div class="card-body">
-        <h5 class="card-title">Rendering</h5>
-        <p class="card-text">Rockbell can render HTML, CSS, and JS files with ease.</p>
-      </div>
-    </div>
-    <div class="card">
-      <img src="https://raw.githubusercontent.com/Hifumi-Sec/rockbell/main/assets/feature_1.jpeg" class="card-img-top" alt="Coming Soon!">
-      <div class="card-body">
-        <h5 class="card-title">Rust</h5>
-        <p class="card-text">Built in Rust. That's all.</p>
-      </div>
-    </div>
-    <div class="card">
-      <img src="https://raw.githubusercontent.com/Hifumi-Sec/rockbell/main/assets/feature_1.jpeg" class="card-img-top" alt="Coming Soon!">
-      <div class="card-body">
-        <h5 class="card-title">Local</h5>
-        <p class="card-text">Simple local web server for ease of use.</p>
-      </div>
-    </div>
-  </div>
-  
-  <footer class="bg-light text-center text-white">
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      &copy 2021 Copyright:
-      <a class="text-white" href="/">Hifumi-Sec</a>
-    </div>
-  </footer>
-
-    <script type="text/javascript" src="js/index.js"></script>
-</body>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/index.js"></script>
+    </body>
 </html>
