--- a/public/index.html
+++ b/public/index.html
@@ -3,24 +3,21 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="Rust, Rust Server, Rockbell" />
+        <meta name="description" content="Server built in pure Rust" />
+        <meta name="ketwords" content="rust, rust server, hifumi sec rust, hifumi-sec, server, rust server" />
         <meta name="author" content="Hifumi-Sec" />
+        <meta property="og:image" content="https://raw.githubusercontent.com/Hifumi-Sec/rockbell/main/public/assets/featured.jpeg">
         <title>Rockbell</title>
-        <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Hifumi-Sec/rockbell/main/public/assets/favicon.ico" />
-        <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
-        <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/style.css" rel="stylesheet" />
     </head>
-    <body id="page-top">
-        <!-- Navigation-->
+    <body id="rockbell">
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#page-top">Rockbell</a>
+                <a class="navbar-brand" href="#rockbell">Rockbell</a>
                 <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -33,81 +30,68 @@
                 </div>
             </div>
         </nav>
-        <!-- Masthead-->
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
-                <!-- Masthead Avatar Image-->
                 <img class="masthead-avatar mb-5" src="https://raw.githubusercontent.com/Hifumi-Sec/rockbell/main/public/assets/favicon.ico" alt="Rust mascot" />
-                <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">Rockbell</h1>
-                <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
-                <!-- Masthead Subheading-->
                 <p class="masthead-subheading font-weight-light mb-0">Built in Rust!</p>
             </div>
             <br />
             <iframe src="https://github.com/sponsors/Hifumi-Sec/card" title="Sponsor Hifumi-Sec" height="100px" width="600" style="background-color: #fff;border-radius: 10px;box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;"></iframe>
         </header>
-        <!-- About Section-->
         <section class="page-section portfolio" id="about">
             <div class="container">
-                <!-- About Section Heading-->
                 <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">About</h2>
-                <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
-                <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-12 ms-auto text-center"><p class="lead">Rockbell is an open-source web server built in Rust for local development. Created by <a href="https://github.com/Hifumi-Sec?tab=repositories">Hifumi-Sec</a>!</p></div>
+                    <div class="col-lg-12 ms-auto text-center"><p class="lead">Rockbell is an open-source web server built in Rust for local development. Created by <a href="https://github.com/Hifumi-Sec" target="_blank">Hifumi-Sec</a>!</p></div>
                 </div>
             </div>
                 <div class="container">
-                    <!-- Portfolio Grid Items-->
                     <div class="row justify-content-center text-center">
-                        <!-- Portfolio Item 1-->
                         <div class="col-md-4 col-lg-3 mb-5 shadow portfolio-container" style="margin-left: 5px; margin-right: 5px;">
                             <div class="portfolio-item mx-auto">
                                 <img class="img-fluid" src="https://raw.githubusercontent.com/Hifumi-Sec/rockbell/main/public/assets/featured.jpeg" alt="Rust mascot" />
                             </div>
-                            <p>Rockbell can render HTML, CSS, and JS files with ease.</p>
+                            <br />
+                            <h5>Rockbell can render HTML, CSS, and JS files with ease.</h5>
                         </div>
-                        <!-- Portfolio Item 2-->
                         <div class="col-md-4 col-lg-3 mb-5 shadow portfolio-container" style="margin-left: 5px; margin-right: 5px;">
                           <div class="portfolio-item mx-auto">
                               <img class="img-fluid" src="https://raw.githubusercontent.com/Hifumi-Sec/rockbell/main/public/assets/featured.jpeg" alt="Rust mascot" />
                           </div>
-                          <p>Simple local web server for ease of use.</p>
+                          <br />
+                          <h5>Simple local web server for ease of use.</h5>
                       </div>
-                      <!-- Portfolio Item 3-->
                       <div class="col-md-4 col-lg-3 mb-5 shadow portfolio-container" style="margin-left: 5px; margin-right: 5px;">
                         <div class="portfolio-item mx-auto">
                             <img class="img-fluid" src="https://raw.githubusercontent.com/Hifumi-Sec/rockbell/main/public/assets/featured.jpeg" alt="Rust mascot" />
                         </div>
-                        <p>Built in Rust. That's all.</p>
+                        <br />
+                        <h5>Built in Rust. That's all.</h5>
                     </div>
                     </div>
                 </div>
             </section>
             <section class="page-section portfolio bg-primary text-white" id="documentation">
               <div class="container">
-                  <!-- About Section Heading-->
                   <h2 class="page-section-heading text-center text-uppercase text-white mb-0">How to use</h2>
-                  <!-- Icon Divider-->
                   <div class="divider-custom">
                       <div class="divider-custom-line"></div>
                       <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                       <div class="divider-custom-line"></div>
                   </div>
-                  <!-- About Section Content-->
                   <div class="row">
-                      <div class="col-lg-12 ms-auto"><p class="lead">Rockbell is pretty easy to implement! All you'll need is to make sure you have cargo installed, and you're good to go.</p></div>
+                      <div class="col-lg-12 ms-auto"><p class="lead">Rockbell is pretty easy to deploy! All you'll need is to make sure you have <a href="https://www.rust-lang.org/tools/install" style="color: #fff;" target="_blank">cargo</a> installed, and you're good to go.</p></div>
                       <div class="col-lg-12 ms-auto"><p class="lead">Just make sure you are in the correct directory. As long as the cargo.toml file is present, you shouldn't have any issues running the server. Once the server is up, go to http://localhost:3005, and you can view this exact website!</p></div>
                   </div>
                    <p class="lead shadow" style="padding: 10px;background-color: #0C242B;border-radius: 10px;">~$ cargo run</p>
@@ -116,18 +100,19 @@
                   <br />Running `target/debug/main`</p>
               </div>
             </section>
-        <!-- Footer-->
         <footer class="footer text-center">
             <div class="container">
                 <div class="row">
-                  <!-- Footer About Text-->
                   <div class="col-lg-4">
                     <h4 class="text-uppercase mb-4">About Rockbell</h4>
                     <p class="lead mb-0">
-                      Rockbell is an open-source web server built in Rust for local development. Created by <a href="https://github.com/Hifumi-Sec">Hifumi-Sec</a>!
+                      Rockbell is an open-source web server built in Rust for local development.
+                    </p>
+                    <p class="lead mb-0">
+                        Proudly open-source: <br />
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/Hifumi-Sec/rockbell" target="_blank"><i class="fab fa-fw fa-github"></i></a>
                     </p>
                       </div>
-                    <!-- Footer Location-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Built on</h4>
                         <p class="lead mb-0">
@@ -136,22 +121,18 @@
                             HTML, CSS, JavaScript, Bootstrap
                         </p>
                     </div>
-                    <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Follow the creator</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/Hifumi-Sec"><i class="fab fa-fw fa-github"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com/hifumi_sec" target="_blank"><i class="fab fa-fw fa-twitter"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/Hifumi-Sec" target="_blank"><i class="fab fa-fw fa-github"></i></a>
                     </div>
                 </div>
             </div>
         </footer>
-        <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
             <div class="container"><small>Copyright &copy; Hifumi-Sec 2021</small></div>
         </div>
-        <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
         <script src="js/index.js"></script>
     </body>
 </html>
