--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
         <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Hifumi-Sec/rockbell/main/public/assets/favicon.ico" />
         <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
         <link href="css/style.css" rel="stylesheet" />
     </head>
     <body id="rockbell">
@@ -34,7 +34,7 @@
             <div class="container d-flex align-items-center flex-column">
                 <img class="masthead-avatar mb-5" src="https://raw.githubusercontent.com/Hifumi-Sec/rockbell/main/public/assets/favicon.ico" alt="Rust mascot" />
                 <h1 class="masthead-heading text-uppercase mb-0">Rockbell</h1>
-                <div class="divider-custom">
+                <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                     <div class="divider-custom-line"></div>
@@ -44,35 +44,35 @@
             <br />
             <iframe src="https://github.com/sponsors/Hifumi-Sec/card" title="Sponsor Hifumi-Sec" height="100px" width="600" style="background-color: #fff;border-radius: 10px;box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;"></iframe>
         </header>
-        <section class="page-section portfolio" id="about">
+        <section class="page-section portfolio" style="background-color: #0C242B;" id="about">
             <div class="container">
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">About</h2>
-                <div class="divider-custom">
+                <h2 class="page-section-heading text-center text-uppercase text-white mb-0">About</h2>
+                <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-12 ms-auto text-center"><p class="lead">Rockbell is an open-source web server built in Rust for local development. Created by <a href="https://github.com/Hifumi-Sec" target="_blank">Hifumi-Sec</a>!</p></div>
+                    <div class="col-lg-12 ms-auto text-center text-white"><p class="lead">Rockbell is an open-source web server built in Rust for local development. Created by <a href="https://github.com/Hifumi-Sec" target="_blank">Hifumi-Sec</a>!</p></div>
                 </div>
             </div>
                 <div class="container">
                     <div class="row justify-content-center text-center">
-                        <div class="col-md-4 col-lg-3 mb-5 shadow portfolio-container" style="margin-left: 5px; margin-right: 5px;">
+                        <div class="col-md-4 col-lg-3 mb-5 shadow-white portfolio-container" style="margin-left: 5px; margin-right: 5px;">
                             <div class="portfolio-item mx-auto">
                                 <img class="img-fluid" src="https://raw.githubusercontent.com/Hifumi-Sec/rockbell/main/public/assets/featured.jpeg" alt="Rust mascot" />
                             </div>
                             <br />
                             <h5>Rockbell can render HTML, CSS, and JS files with ease.</h5>
                         </div>
-                        <div class="col-md-4 col-lg-3 mb-5 shadow portfolio-container" style="margin-left: 5px; margin-right: 5px;">
+                        <div class="col-md-4 col-lg-3 mb-5 shadow-white portfolio-container" style="margin-left: 5px; margin-right: 5px;">
                           <div class="portfolio-item mx-auto">
                               <img class="img-fluid" src="https://raw.githubusercontent.com/Hifumi-Sec/rockbell/main/public/assets/featured.jpeg" alt="Rust mascot" />
                           </div>
                           <br />
                           <h5>Simple local web server for ease of use.</h5>
                       </div>
-                      <div class="col-md-4 col-lg-3 mb-5 shadow portfolio-container" style="margin-left: 5px; margin-right: 5px;">
+                      <div class="col-md-4 col-lg-3 mb-5 shadow-white portfolio-container" style="margin-left: 5px; margin-right: 5px;">
                         <div class="portfolio-item mx-auto">
                             <img class="img-fluid" src="https://raw.githubusercontent.com/Hifumi-Sec/rockbell/main/public/assets/featured.jpeg" alt="Rust mascot" />
                         </div>
@@ -85,7 +85,7 @@
             <section class="page-section portfolio bg-primary text-white" id="documentation">
               <div class="container">
                   <h2 class="page-section-heading text-center text-uppercase text-white mb-0">How to use</h2>
-                  <div class="divider-custom">
+                  <div class="divider-custom divider-light">
                       <div class="divider-custom-line"></div>
                       <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                       <div class="divider-custom-line"></div>
