Some minor cleanup for the entire project

--- a/public/error_handling/404.html
+++ b/public/error_handling/404.html
@@ -4,37 +4,35 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="404" />
-        <meta name="author" content="Hifumi-Sec" />
+        <meta name="author" content="Hifumi1337" />
         <title>404 | Rockbell</title>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Hifumi-Sec/rockbell/main/public/assets/favicon.ico" />
-        <!-- Font Awesome icons (free version)-->
+        <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Hifumi1337/rockbell/main/public/assets/favicon.ico" />
         <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
-        <!-- Core theme CSS (includes Bootstrap)-->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
         <link href="css/style.css" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#page-top">Rockbell</a>
+                <a class="navbar-brand" href="/#rockbell">Rockbell</a>
                 <button class="navbar-toggler text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">About</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#documentation">Docs</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="/#about">About</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="/#documentation">Docs</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
         <div class="text-center">
-          <h1>404 ~ This is not the page you are looking for</h1>
+            <h1 style="margin-top: 25vh; margin-bottom: 25vh; width: 100%;">404 ~ This is not the page you are looking for</h1>
+            <img class="img-fluid" src="https://raw.githubusercontent.com/Hifumi1337/rockbell/main/public/assets/featured.jpeg"/>
         </div>
         <!-- Footer-->
         <footer class="footer text-center">
@@ -44,7 +42,7 @@
                   <div class="col-lg-4">
                     <h4 class="text-uppercase mb-4">About Rockbell</h4>
                     <p class="lead mb-0">
-                      Rockbell is an open-source web server built in Rust for local development. Created by <a href="https://github.com/Hifumi-Sec">Hifumi-Sec</a>!
+                      Rockbell is an open-source web server built in Rust for local development. Created by <a href="https://github.com/Hifumi1337">Hifumi1337</a>!
                     </p>
                       </div>
                     <!-- Footer Location-->
@@ -59,15 +57,15 @@
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Follow the creator</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/Hifumi-Sec"><i class="fab fa-fw fa-github"></i></a>
+                        <!-- <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a> -->
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/Hifumi1337"><i class="fab fa-fw fa-github"></i></a>
                     </div>
                 </div>
             </div>
         </footer>
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright &copy; Hifumi-Sec 2021</small></div>
+            <div class="container"><small>Copyright &copy; Hifumi1337 2021 - 2022</small></div>
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
