--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="Server built in pure Rust" />
-        <meta name="ketwords" content="rust, rust server, hifumi sec rust, hifumi-sec, server, rust server" />
-        <meta name="author" content="Hifumi-Sec" />
-        <meta property="og:image" content="https://raw.githubusercontent.com/Hifumi-Sec/rockbell/main/public/assets/featured.jpeg">
+        <meta name="ketwords" content="rust, rust server, hifumi sec rust, Hifumi1337, server, rust server" />
+        <meta name="author" content="Hifumi1337" />
+        <meta property="og:image" content="https://raw.githubusercontent.com/Hifumi1337/rockbell/main/public/assets/featured.jpeg">
         <title>Rockbell</title>
-        <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Hifumi-Sec/rockbell/main/public/assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Hifumi1337/rockbell/main/public/assets/favicon.ico" />
         <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
@@ -32,7 +32,7 @@
         </nav>
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
-                <img class="masthead-avatar mb-5" src="https://raw.githubusercontent.com/Hifumi-Sec/rockbell/main/public/assets/favicon.ico" alt="Rust mascot" />
+                <img class="masthead-avatar mb-5" src="https://raw.githubusercontent.com/Hifumi1337/rockbell/main/public/assets/favicon.ico" alt="Rust mascot" />
                 <h1 class="masthead-heading text-uppercase mb-0">Rockbell</h1>
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
@@ -42,7 +42,7 @@
                 <p class="masthead-subheading font-weight-light mb-0">Built in Rust!</p>
             </div>
             <br />
-            <iframe src="https://github.com/sponsors/Hifumi-Sec/card" title="Sponsor Hifumi-Sec" height="100px" width="600" style="background-color: #fff;border-radius: 10px;box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;"></iframe>
+            <iframe src="https://github.com/sponsors/Hifumi1337/card" title="Sponsor Hifumi1337" height="100px" width="600" style="background-color: #fff;border-radius: 10px;box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;"></iframe>
         </header>
         <section class="page-section portfolio" style="background-color: #0C242B;" id="about">
             <div class="container">
@@ -53,31 +53,31 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-12 ms-auto text-center text-white"><p class="lead">Rockbell is an open-source web server built in Rust for local development. Created by <a href="https://github.com/Hifumi-Sec" target="_blank">Hifumi-Sec</a>!</p></div>
+                    <div class="col-lg-12 ms-auto text-center text-white"><p class="lead">Rockbell is an open-source web server built in Rust for local development. Created by <a href="https://github.com/Hifumi1337" target="_blank">Hifumi1337</a>!</p></div>
                 </div>
             </div>
                 <div class="container">
                     <div class="row justify-content-center text-center">
                         <div class="col-md-4 col-lg-3 mb-5 shadow-white portfolio-container" style="margin-left: 5px; margin-right: 5px;">
                             <div class="portfolio-item mx-auto">
-                                <img class="img-fluid" src="https://raw.githubusercontent.com/Hifumi-Sec/rockbell/main/public/assets/featured.jpeg" alt="Rust mascot" />
+                                <img class="img-fluid" src="https://raw.githubusercontent.com/Hifumi1337/rockbell/main/public/assets/featured.jpeg" alt="Winry Rockbell" />
                             </div>
                             <br />
                             <h5>Rockbell can render HTML, CSS, and JS files with ease.</h5>
                         </div>
                         <div class="col-md-4 col-lg-3 mb-5 shadow-white portfolio-container" style="margin-left: 5px; margin-right: 5px;">
                           <div class="portfolio-item mx-auto">
-                              <img class="img-fluid" src="https://raw.githubusercontent.com/Hifumi-Sec/rockbell/main/public/assets/featured.jpeg" alt="Rust mascot" />
+                              <img class="img-fluid" src="https://raw.githubusercontent.com/Hifumi1337/rockbell/main/public/assets/featured.jpeg" alt="Winry Rockbell" />
                           </div>
                           <br />
                           <h5>Simple local web server for ease of use.</h5>
                       </div>
                       <div class="col-md-4 col-lg-3 mb-5 shadow-white portfolio-container" style="margin-left: 5px; margin-right: 5px;">
                         <div class="portfolio-item mx-auto">
-                            <img class="img-fluid" src="https://raw.githubusercontent.com/Hifumi-Sec/rockbell/main/public/assets/featured.jpeg" alt="Rust mascot" />
+                            <img class="img-fluid" src="https://raw.githubusercontent.com/Hifumi1337/rockbell/main/public/assets/featured.jpeg" alt="Winry Rockbell" />
                         </div>
                         <br />
-                        <h5>Built in Rust. That's all.</h5>
+                        <h5>Built in Rust</h5>
                     </div>
                     </div>
                 </div>
@@ -100,6 +100,11 @@
                   <br />Running `target/debug/main`</p>
               </div>
             </section>
+
+            <div class="text-center">
+                <img class="img-fluid" src="https://raw.githubusercontent.com/Hifumi1337/rockbell/main/public/assets/featured.jpeg"/>
+            </div>
+
         <footer class="footer text-center">
             <div class="container">
                 <div class="row">
@@ -110,7 +115,7 @@
                     </p>
                     <p class="lead mb-0">
                         Proudly open-source: <br />
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/Hifumi-Sec/rockbell" target="_blank"><i class="fab fa-fw fa-github"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/Hifumi1337/rockbell" target="_blank"><i class="fab fa-fw fa-github"></i></a>
                     </p>
                       </div>
                     <div class="col-lg-4 mb-5 mb-lg-0">
@@ -123,14 +128,14 @@
                     </div>
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Follow the creator</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com/hifumi_sec" target="_blank"><i class="fab fa-fw fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/Hifumi-Sec" target="_blank"><i class="fab fa-fw fa-github"></i></a>
+                        <!-- <a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com/Hifumi1337" target="_blank"><i class="fab fa-fw fa-twitter"></i></a> -->
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/Hifumi1337" target="_blank"><i class="fab fa-fw fa-github"></i></a>
                     </div>
                 </div>
             </div>
         </footer>
         <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright &copy; Hifumi-Sec 2021</small></div>
+            <div class="container"><small>Copyright &copy; Hifumi1337 2021 - 2022</small></div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
         <script src="js/index.js"></script>
