--- a/public/index.html
+++ b/public/index.html
@@ -100,15 +100,12 @@
                       <div class="col-lg-12 ms-auto"><p class="lead">Rockbell is pretty easy to deploy! All you'll need is to make sure you have <a href="https://www.rust-lang.org/tools/install" style="color: #fff;" target="_blank">cargo</a> installed and you're good to go.</p></div>
                       <div class="col-lg-12 ms-auto"><p class="lead">As long as the cargo.toml file is present, you shouldn't have any issues running the server. Once the server is up, go to http://localhost:1337, and you can view this exact website. You don't even have to restart the server, just reload the browser and your changes should be immediately visible.</p></div>
                   </div>
-                   <p class="lead shadow" style="padding: 10px;background-color: #0C242B;border-radius: 10px;">~$ cargo run</p>
+                   <p class="lead shadow" style="padding: 10px;background-color: #0C242B;border-radius: 10px;">~$ cargo run -- normal</p>
                    <p class="lead">You should see the following confirmation:</p>
                    <p class="lead shadow" style="padding: 10px;background-color: #0C242B;border-radius: 10px;">
                             Finished dev [unoptimized + debuginfo] target(s) in 0.00s
                             <br />Running `target/debug/main`<br />
                             <br />Rockbell is currently listening on http://127.0.0.1:1337
-                    </p>
-                    <p>
-                        *You may receive a warning due to the `id` field. This can be ignored.
                     </p>
               </div>
             </section>
