--- a/public/error_handling/500.html
+++ b/public/error_handling/500.html
@@ -4,9 +4,9 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="404" />
-        <meta name="author" content="Hifumi1337" />
+        <meta name="author" content="azazelm3dj3d" />
         <title>404 | Rockbell</title>
-        <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Hifumi1337/rockbell/main/public/assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/azazelm3dj3d/rockbell/main/public/assets/favicon.ico" />
         <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
@@ -32,7 +32,7 @@
         </nav>
         <div class="text-center">
             <h1 style="margin-top: 25vh; margin-bottom: 25vh; width: 100%;">500 ~ Internal Server Error</h1>
-            <img class="img-fluid" src="https://raw.githubusercontent.com/Hifumi1337/rockbell/main/public/assets/featured.jpeg"/>
+            <img class="img-fluid" src="https://raw.githubusercontent.com/azazelm3dj3d/rockbell/main/public/assets/featured.jpeg"/>
         </div>
         <!-- Footer-->
         <footer class="footer text-center">
@@ -42,7 +42,7 @@
                   <div class="col-lg-4">
                     <h4 class="text-uppercase mb-4">About Rockbell</h4>
                     <p class="lead mb-0">
-                      Rockbell is an open-source web server built in Rust for local development. Created by <a href="https://github.com/Hifumi1337">Hifumi1337</a>!
+                      Rockbell is an open-source web server built in Rust for local development. Created by <a href="https://github.com/azazelm3dj3d">azazelm3dj3d</a>!
                     </p>
                       </div>
                     <!-- Footer Location-->
@@ -58,14 +58,14 @@
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Follow the creator</h4>
                         <!-- <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a> -->
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/Hifumi1337"><i class="fab fa-fw fa-github"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/azazelm3dj3d"><i class="fab fa-fw fa-github"></i></a>
                     </div>
                 </div>
             </div>
         </footer>
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright &copy; Hifumi1337 2021 - 2022</small></div>
+            <div class="container"><small>Copyright &copy; azazelm3dj3d 2021 - 2022</small></div>
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
